@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 08-12-2004 changed: settings, added category "View Options" for my programs
   - 08-12-2004 changed: a dummy time is displayed in the video osd when calibrating
   - 08-12-2004 added: option to show time as 12 hour clock
   - 08-12-2004 added: option to swap day and month in home screen
